<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_background"
    tools:context=".SettingActivity">


    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        >
        <FrameLayout
            android:background="@drawable/rounded_corners_camera"
            android:layout_width="44dp"
            android:layout_height="44dp">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imageview_back"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/back_icon" />
        </FrameLayout>
        <TextView
            android:id="@+id/details_text"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="24sp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corners_setting"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/setting"
        android:orientation="vertical"
        android:layout_width="327dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlPrivacy"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/icon_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/icon_privacy"
                android:text="@string/privacy"
                android:textColor="@color/title_color"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <ImageView
                android:id="@+id/icon_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/icon_share"
                android:text="@string/share"
                android:textColor="@color/title_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <ImageView
                android:id="@+id/icon_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/rate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/icon_rate"
                android:text="@string/Rate"
                android:textColor="@color/title_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlVersion"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <ImageView
                android:id="@+id/icon_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:src="@drawable/icon_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/icon_version"
                android:text="@string/version"
                android:textColor="@color/title_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/version"
                android:textColor="@color/title_color" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>